--- a/Grid- Adabooster.ipynb
+++ b/Grid- Adabooster.ipynb
@@ -406,14 +406,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#once we split and test the data we have to do Model Creation using Grid SVM \n",
+    "#once we split and test the data we have to do Model Creation using Grid Adabooster\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.ensemble import AdaBoostRegressor\n",
     "#beloww method we take all the parameter fited into the single model\n",
     "param_grid = {'n_estimators': [50, 100, 200],'learning_rate': [0.01, 0.1, 1.0]}\n",
     "\n",
     "#in the below method we fit all the models into the grid.\n",
-    "grid=GridSearchCV(AdaBoostClassifier, param_grid, cv=5)\n",
+    "grid=GridSearchCV(AdaBoostRegressor, param_grid,refit=True,verbose=3,n_jobs=1)\n",
     "\n",
     "#fitting the model for grid search\n",
     "grid.fit=(x_train,y_train)\n",
